# secret-santa-generator

./: .gitignore  README.md  pyproject.toml
resources/: participants.json.example
src/secret_santa/: __init__.py  __main__.py
tests/: test_cli.py  test_mapping.py  test_pdf.py
