[build-system]
requires = ["pdm-backend>=0.10.0"]
build-backend = "pdm.backend"

[project]
name = "secret-santa-generator"
version = "0.1.0"
description = "A small Secret Santa pairing generator"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "apastel" } ]
requires-python = ">=3.8"

dependencies = [
	"click>=8.1.3",
]

[project.optional-dependencies]
pdf = ["reportlab>=3.6.0"]

[project.scripts]
secret-santa = "secret_santa.__main__:main"

[tool.pdm.dev-dependencies]
pytest = "*"

[tool.pdm]
package-dir = { "" = "src" }
packages = [{ include = "secret_santa" }]
