[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-santa-generator"
version = "0.1.0"
description = "A small Secret Santa pairing generator"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "apastel" } ]
requires-python = ">=3.8"
dependencies = [
	"click>=8.1.3",
]
[project.scripts]
secret-santa = "secret_santa.__main__:main"

[project.optional-dependencies]
pdf = ["reportlab>=3.6.0"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
